--- a/style.css
+++ b/style.css
@@ -14,11 +14,17 @@ body, html {
     width: 100%;
     height: 100%;
     position: relative;
+        background-color: #004282;
 }
 .image-container {
  position: absolute;
     cursor: move;
 }
+img .image-container {
+border-radius: 0.42em;
+    filter: drop-shadow(8px 2px 8px #000420);
+}
+
 
 #footer {
     filter: url(#warp);
